--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Photo Album Search</h1>
+            <h1>Photos Album Search</h1>
             <p>Search your photos using natural language</p>
         </header>
 
